[gd_scene load_steps=25 format=2]

[ext_resource path="res://sprites/tankBody_blue.png" type="Texture" id=1]
[ext_resource path="res://scripts/Tank.gd" type="Script" id=2]
[ext_resource path="res://sprites/tankBlue_barrel1_outline.png" type="Texture" id=3]
[ext_resource path="res://sprites/shotThin.png" type="Texture" id=4]
[ext_resource path="res://sprites/shotOrange.png" type="Texture" id=5]
[ext_resource path="res://sprites/shotLarge.png" type="Texture" id=6]
[ext_resource path="res://sprites/shotRed.png" type="Texture" id=7]
[ext_resource path="res://sprites/smokeWhite1.png" type="Texture" id=8]
[ext_resource path="res://scripts/sight.gd" type="Script" id=9]
[ext_resource path="res://sprites/specialBarrel4_outline.png" type="Texture" id=10]
[ext_resource path="res://samples/tank_cannon.wav" type="AudioStream" id=11]
[ext_resource path="res://samples/reload.wav" type="AudioStream" id=12]
[ext_resource path="res://samples/disparo_hmg_tank.wav" type="AudioStream" id=13]
[ext_resource path="res://samples/tank_motor.wav" type="AudioStream" id=14]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.437037 )
colors = PoolColorArray( 0.54902, 0.54902, 0.54902, 0.235294, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
min_value = -1.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0.696203, 0.504545 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
flag_disable_z = true
direction = Vector3( -5, 0, 0 )
flatness = 1.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 20.0
initial_velocity_random = 1.0
angular_velocity = 10.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = 5.0
scale = 0.1
scale_random = 0.1
scale_curve = SubResource( 6 )
color_ramp = SubResource( 2 )
hue_variation_curve = SubResource( 4 )

[sub_resource type="Animation" id=8]
resource_name = "barrel_shoot"
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 0.25, 0.34151 ),
"update": 0,
"values": [ Vector2( -10, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=9]
tracks/0/type = "value"
tracks/0/path = NodePath("spriteShoot:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 7 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 4 ), null ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("spriteShoot:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 37, -1.42109e-14 ), Vector2( 33, -7.10543e-15 ), Vector2( 33, -3.55271e-15 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("spriteShoot:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.475 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="GDScript" id=10]
resource_name = "tank_samples"
script/source = "extends Node


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
	get_parent().connect(\"cannon_bullet\",self,\"_on_tank_cannon_bullet\")
	get_parent().connect(\"hm_bullet\",self, \"_on_tank_hm_bullet\")
	$motor.play()

func _on_tank_cannon_bullet():
	$cannon.play()
	yield($cannon,\"finished\")
	$reload.play()

func _on_tank_hm_bullet():
	$heavy_mg.play()

func _physics_process(delta):
	var pitch = abs(get_parent().acell / get_parent().MAX_SPEED)
	$motor.pitch_scale = pitch + 0.7
	
"

[node name="Tank" type="KinematicBody2D"]
z_index = 5
collision_layer = 2
collision_mask = 5
script = ExtResource( 2 )

[node name="smoke" type="Particles2D" parent="."]
position = Vector2( -17, -3 )
amount = 32
lifetime = 0.6
local_coords = false
process_material = SubResource( 7 )
texture = ExtResource( 8 )

[node name="smoke2" type="Particles2D" parent="."]
position = Vector2( -17, 3 )
amount = 32
lifetime = 0.6
local_coords = false
process_material = SubResource( 7 )
texture = ExtResource( 8 )

[node name="poly" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -13, -18, -19, -12, -19, 12, -13, 18, 13, 18, 19, 12, 19, -12, 13, -18 )

[node name="sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 1 )

[node name="barrel" type="Node2D" parent="."]

[node name="sprite" type="Sprite" parent="barrel"]
position = Vector2( -10, 0 )
rotation = 1.5708
z_index = 2
texture = ExtResource( 3 )
offset = Vector2( 0, -8 )

[node name="spriteShoot" type="Sprite" parent="barrel"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 33, -3.55271e-15 )
rotation = -1.5708
scale = Vector2( 0.8, 0.8 )
z_index = 1
texture = ExtResource( 7 )

[node name="muzzle" type="Position2D" parent="barrel"]
position = Vector2( 30, 0 )
z_index = -1

[node name="anim" type="AnimationPlayer" parent="barrel"]
playback_speed = 2.0
anims/barrel_shoot = SubResource( 8 )
anims/fire = SubResource( 9 )

[node name="sight" type="Node2D" parent="barrel"]
position = Vector2( 300, 0 )
rotation = 6.2832
script = ExtResource( 9 )

[node name="time_reload" type="Timer" parent="barrel"]
wait_time = 2.0

[node name="mg" type="Node2D" parent="."]

[node name="mg_sprite" type="Sprite" parent="mg"]
position = Vector2( 16, -8 )
rotation = -1.5708
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 10 )

[node name="muzzle" type="Position2D" parent="mg"]
position = Vector2( 31, -7 )

[node name="mg_timer" type="Timer" parent="mg"]
wait_time = 0.1

[node name="sample" type="Node" parent="."]
script = SubResource( 10 )

[node name="cannon" type="AudioStreamPlayer" parent="sample"]
stream = ExtResource( 11 )
bus = "Fx"

[node name="reload" type="AudioStreamPlayer" parent="sample"]
stream = ExtResource( 12 )
bus = "Fx"

[node name="heavy_mg" type="AudioStreamPlayer" parent="sample"]
stream = ExtResource( 13 )
volume_db = -7.0
bus = "Fx"

[node name="motor" type="AudioStreamPlayer" parent="sample"]
stream = ExtResource( 14 )
volume_db = -5.0
bus = "Fx"
[connection signal="timeout" from="barrel/time_reload" to="." method="_on_time_reload_timeout"]
[connection signal="timeout" from="mg/mg_timer" to="." method="_on_mg_timer_timeout"]
